<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>Ejercicio2</groupId>
	<artifactId>SerenityBDD</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<packaging>jar</packaging>

	<name>SerenityBDD</name>
	<url>http://maven.apache.org</url>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<!-- serenity.version>4.1.12</serenity.version -->
		<serenity.version>2.3.4</serenity.version>
		<serenity.maven.version>2.3.4</serenity.maven.version>
	</properties>

	<dependencies>

		<dependency>
			<groupId>com.google.guava</groupId>
			<artifactId>guava</artifactId>
			<version>23.6-jre</version>
		</dependency>
		<dependency>
			<groupId>org.assertj</groupId>
			<artifactId>assertj-core</artifactId>
			<version>3.6.2</version>
		</dependency>



		<!-- https://mvnrepository.com/artifact/io.rest-assured/rest-assured -->
		<dependency>
			<groupId>io.rest-assured</groupId>
			<artifactId>rest-assured</artifactId>
			<version>5.4.0</version>
			<scope>test</scope>
		</dependency>

		<!-- https://mvnrepository.com/artifact/net.serenity-bdd/serenity-core -->
		<dependency>
			<groupId>net.serenity-bdd</groupId>
			<artifactId>serenity-core</artifactId>
			<version>${serenity.version}</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/net.serenity-bdd/serenity-junit -->
		<dependency>
			<groupId>net.serenity-bdd</groupId>
			<artifactId>serenity-junit</artifactId>
			<version>${serenity.version}</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/net.serenity-bdd/serenity-screenplay -->
		<dependency>
			<groupId>net.serenity-bdd</groupId>
			<artifactId>serenity-screenplay</artifactId>
			<version>${serenity.version}</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/net.serenity-bdd/serenity-screenplay-webdriver -->
		<dependency>
			<groupId>net.serenity-bdd</groupId>
			<artifactId>serenity-screenplay-webdriver</artifactId>
			<version>${serenity.version}</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/net.serenity-bdd/serenity-cucumber -->
		<dependency>
			<groupId>net.serenity-bdd</groupId>
			<artifactId>serenity-cucumber6</artifactId>
			<version>${serenity.version}</version>
		</dependency>



		<!-- https://mvnrepository.com/artifact/net.serenity-bdd/serenity-reports -->
		<dependency>
			<groupId>net.serenity-bdd</groupId>
			<artifactId>serenity-reports</artifactId>
			<version>${serenity.version}</version>
		</dependency>


		<!-- https://mvnrepository.com/artifact/org.hamcrest/hamcrest-all -->
	<dependency>
		<groupId>org.hamcrest</groupId>
		<artifactId>hamcrest-all</artifactId>
		<version>1.3</version>
		<scope>test</scope>
	</dependency>
		<!-- https://mvnrepository.com/artifact/org.hamcrest/hamcrest -->
<!-- 		<dependency> -->
<!-- 			<groupId>org.hamcrest</groupId> -->
<!-- 			<artifactId>hamcrest</artifactId> -->
<!-- 			<version>2.2</version> -->
<!-- 			<scope>test</scope> -->
<!-- 		</dependency> -->
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>3.8.1</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-simple</artifactId>
			<version>1.7.7</version>
		</dependency>
	</dependencies>
	<build>
		<plugins>


			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.20</version>
				<configuration>
					<argLine>-Xmx1024m -XX:MaxPermSize=512m</argLine>
					<skip>true</skip>
					<skipTests>true</skipTests>
				</configuration>
			</plugin>



			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-failsafe-plugin</artifactId>
				<version>2.18.1</version>
				<configuration>
					<includes>
						<include>**/*Test.java</include>
						<include>**/features/**/*.java</include>
						<include>**/*Test*.java</include>
					</includes>
					<!-- ystemPropertyVariables> <restapi.baseurl>${restapi.baseurl}</restapi.baseurl> 
						</systemPropertyVariables -->
				</configuration>
				<executions>
					<execution>

					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>net.serenity-bdd.maven.plugins</groupId>
				<artifactId>serenity-maven-plugin</artifactId>
				<version>${serenity.maven.version}</version>
				<dependencies>
					<dependency>
						<groupId>net.serenity-bdd</groupId>
						<artifactId>serenity-core</artifactId>
						<version>${serenity.version}</version>
					</dependency>
				</dependencies>
				<executions>
					<execution>
						<id>serenity-reports</id>
						<phase>post-integration-test</phase>
						<goals>
							<goal>aggregate</goal>
							<goal>reports</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
				</configuration>
			</plugin>

		</plugins>
	</build>


</project>
